charts/activemq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: activemq
  namespace: activemq-artemis-operator
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - activemq.itblast.ovh
  rules:
    - host: activemq.itblast.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: activemq
                port:
                  name: web
